@@ -11,7 +11,7 @@ mint_SOURCES =		\
 	interp.c	
 
 mint_LDADD =				\
-	../arch/x86/libmonoarch.a	\
+	../arch/libmonoarch.la	\
 	../metadata/libmetadata.a	\
 	$(GLIB_LIBS)			\
 	$(GMODULE_LIBS) 		\
