@@ -1,13 +1,36 @@
 #ifndef _MONO_METADATA_ENDIAN_H_
 #define _MONO_METADATA_ENDIAN_H_ 1
 
-/* FIXME: implement big endian versions */
+#include <glib.h>
 
-#define le64_to_cpu(x) (x)
-#define le32_to_cpu(x) (x)
-#define le16_to_cpu(x) (x)
-#define read32(x) le32_to_cpu (*((guint32 *) (x)))
-#define read16(x) le16_to_cpu (*((guint16 *) (x)))
-#define read64(x) le64_to_cpu (*((guint64 *) (x)))
+/* FIXME: implement support for misaligned reads */
+
+typedef union {
+	guint32 ival;
+	float fval;
+} mono_rfloat;
+
+typedef union {
+	guint64 ival;
+	double fval;
+} mono_rdouble;
+
+#define read16(x) GUINT16_FROM_LE (*((guint16 *) (x)))
+#define read32(x) GUINT32_FROM_LE (*((guint32 *) (x)))
+#define read64(x) GUINT64_FROM_LE (*((guint64 *) (x)))
+
+#define readr4(x,dest)	\
+	do {	\
+		mono_rfloat mf;	\
+		mf.ival = read32 ((x));	\
+		*(dest) = mf.fval;	\
+	} while (0)
+
+#define readr8(x,dest)	\
+	do {	\
+		mono_rdouble mf;	\
+		mf.ival = read64 ((x));	\
+		*(dest) = mf.fval;	\
+	} while (0)
 
 #endif /* _MONO_METADATA_ENDIAN_H_ */
